fixed fonts size on mobile version

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -157,7 +157,7 @@
 
 .banner-note {
   text-align: center;
-  font-size: 18px;
+  font-weight: bold;
 }
 
 @keyframes dash {
