--- a/styles/coworking.css
+++ b/styles/coworking.css
@@ -6,15 +6,14 @@
   padding: 0 20px
 }
 .path {
-  font-size: 18px;
   color: var(--grey);
   padding: 50px 0;
 }
 .coworking-title {
-  font-size: 42px;
   font-weight: normal;
   text-align: center;
   margin-bottom: 80px;
+  text-transform: uppercase;
 }
 .coworking-subtitle {
   text-align: center;
