--- a/styles/footer.css
+++ b/styles/footer.css
@@ -22,9 +22,6 @@
 .contacts-mobile-break {
   display: none;
 }
-.contacts-address {
-  font-size: 15px;
-}
 .contacts-address > span {
   color: var(--grey);
 }
@@ -41,7 +38,7 @@
 }
 .socials > h4 {
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: normal;
 }
 .socials-row-icons {
@@ -76,7 +73,6 @@
 .politics > a {
   text-decoration: underline;
   color: var(--grey);
-  font-size: 15px;
   text-align: center;
 }
 
