--- a/styles/index.css
+++ b/styles/index.css
@@ -8,7 +8,7 @@ body {
   flex-direction: column;
   align-items: center;
   color: var(--dark);
-  font-size: 20px;
+  font-size: 12px;
   overflow-x: hidden;
 }
 
@@ -18,8 +18,12 @@ body {
   margin: 0;
 }
 
+h1 {
+  font-size: 18px;
+}
+
 h2 {
-  font-size: 30px;
+  font-size: 14px;
 }
 
 a,
@@ -31,12 +35,17 @@ button {
 fieldset {
   border: none;
 }
-legend {
-  font-size: 18px;
-}
+
 
 button {
   padding: 20px 50px;
   border: 1px solid var(--grey);
   text-transform: uppercase;
+  color: var(--grey);
+  background-color: transparent;
+}
+button:hover {
+  background-color: var(--dark);
+  color: white;
+  border: none;
 }
